--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,8 @@ img {
 }
 .main-menu a {
 	display:				block;
- 	padding:				7px 11px;
+	margin:					7px 11px;
+	border-bottom:			1px solid rgba(255,255,255,.2);
 }
 .main-menu a,
 .main-menu li:first-child {
@@ -58,14 +59,6 @@ img {
 	line-height: 		1.125;
 	font-weight: 		700;
 	color:				white;
-}
-.main-menu a::after {
-	content:			"";
-	position:			absolute;
-	left:				0;
-	right:				0;
-	height:				1px;
-	background-color:	rgba(255,255,255,0.2);
 }
 .main-menu li:hover {
 	background-color:	white;
@@ -94,8 +87,8 @@ img {
 	color:				black;
 	text-decoration:	none;
 }
-.main-menu li:active {
-	box-shadow: 		inset 0 0 5 #696969;
+.main-item:active {
+	box-shadow: 		inset 0 2px 1px #696969;
 }
 .sub-menu a:hover {
 	background-color: 	#fbded7;
@@ -134,17 +127,26 @@ a.sub-new::after {
 .sub-menu a {
 	display:			block;
 	color:				#323232;
+	margin: 			0;
  	padding:			8px 21px;
+	border-bottom:		none;
 	font-size:			14px;
 	line-height:		1.142;
 	font-weight:		400;
-	text-decoration:	none;
 }
 .sub-menu a:hover {
 	background-color:	#fbded7;
 }
 .sub-menu a:active {
 	background-color:	#f6b5a5;
+}
+.sub-new:hover {
+	border-top-left-radius:			5px;
+	border-top-right-radius:		5px;
+}
+.sub-melorin:hover {
+	border-bottom-left-radius:		5px;
+	border-bottom-right-radius:		5px;
 }
 .user-block {
 	position:			relative;
@@ -213,14 +215,11 @@ a.sub-new::after {
 	font-size: 				13px;
 	font-weight: 			400;
 	line-height: 			1.846;
-	text-decoration:		underline;
-	text-decoration-color:	#aeadab;
+	border-bottom: 			1px solid rgba(50,50,50,.3);
 }
-
 .modal-autorization {
 	display: flex;
 }
-
 .user-data input[type="text"]:hover,
 .modal-login input:hover,
 .map-modal input[type="text"]:hover,
@@ -576,10 +575,12 @@ footer {
 .footer-info a {
 	font-size: 				13px;
 	line-height: 			1.384;
-	font-weight: 			700;
+	font-weight: 			400;
 	color:					white;
-	text-decoration:		underline;
-	text-decoration-color:	#adbdb4;	
+	border-bottom: 			1px solid rgba(255,255,255,.2);
+}
+.footer-info .heart {
+	font-weight: 			700;
 }
 .info-part li:first-child::before {
 	top:			 		5px;
@@ -589,6 +590,12 @@ footer {
 	background-image: 		url("../img/heart.svg");
 	background-repeat: 		no-repeat;
 	background-position: 	0 0;
+}
+.footer-info a:focus,
+.footer-info a:hover,
+.copyright a:focus,
+.copyright a:hover {
+	color: 					#ffbc9e;
 }
 .info-part li:nth-child(1),
 .info-part li:nth-child(3) {
@@ -610,6 +617,5 @@ footer {
 	color:				white;
 }
 .copyright a {
-	text-decoration:		underline;
-	text-decoration-color:	#adbdb4;	
+	border-bottom: 		1px solid rgba(255,255,255,.2);
 }
