--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ a.sub-new::after {
 	padding:		0;
 }
 body {
-	background-color: 		#849d8f;
+	background: 			#849d8f url("../img/ice_raspberries_bar.png") no-repeat top center;
 	font-family: 			Roboto, Arial, sans-serif;
 	color:					white;
 }
@@ -259,6 +259,7 @@ a.sub-new::after {
 	color:					white;		
 }
 .user-block p {
+	margin:			0;
 	font-size: 		14px;
 	line-height: 	1.142;
 	font-weight: 	700;
@@ -267,6 +268,9 @@ a.sub-new::after {
 	font-size: 		22px;
 	line-height: 	1.09; 
 	font-weight: 	700;
+}
+.sliders {
+	margin-top:		170px;
 }
 .breadcrumbs {
 	list-style:		none;
@@ -288,6 +292,18 @@ a.sub-new::after {
 	background: 		url("../img/basket_red.svg") no-repeat;
 	background-color:	white;
 	color:				#323232;
+}
+.sel-raspberry,
+.sel-chocolate {
+	width:				560px;
+	min-height:			230px;
+	border-radius:		10px;
+}
+.sel-raspberry {
+	background: 		#000 url("../img/raspberries_free.png");
+}
+.sel-chocolate {
+	background: 		#000 url("../img/chocolate_free.png");
 }
 .sel-raspberry p:first-child,
 .sel-chocolate p:first-child {
@@ -397,13 +413,13 @@ a.sub-new::after {
 .user-blog {
 	display:			flex;
 	justify-content:	space-between;
+	min-height:			220px;
 	margin-bottom:		40px;
 }
 .blog {
 	width:					560px;
-	min-height:				147px;
 	padding:				15px 12px;
-	background:				url("../img/subscribe.jpg");
+	background:				url("../img/blog_bg.png");
 	background-color:		#ffffff;
 	background-repeat: 		no-repeat;
 	background-position:	100% 40%;
