--- a/css/style.css
+++ b/css/style.css
@@ -17,9 +17,9 @@ a.sub-new::after {
 	padding:		0;
 }
 body {
-	background: 			#849d8f url("../img/ice_raspberries_bar.png") no-repeat top center;
-	font-family: 			Roboto, Arial, sans-serif;
-	color:					white;
+	background: 	#849d8f url("../img/ice_raspberries_bar.png") no-repeat top center;
+	font-family: 	Roboto, Arial, sans-serif;
+	color:			white;
 }
 .main-header {
 	display: 		flex;
@@ -30,7 +30,7 @@ body {
 }
 .container {
 	width:	 		1200px;
-	margin: 		0 auto;
+	margin: 		0 auto 20px;
 	padding:		0 27px;
 }
 a {
@@ -49,9 +49,9 @@ img {
 	list-style:			none;
 }
 .main-menu a {
-	display:				block;
-	margin:					7px 11px;
-	border-bottom:			1px solid rgba(255,255,255,.2);
+	display:			block;
+	margin:				7px 11px;
+	border-bottom:		1px solid rgba(255,255,255,.2);
 }
 .main-menu a,
 .main-menu li:first-child {
@@ -73,16 +73,16 @@ img {
 	background-color:	white;
 }
 .login svg {
-	fill:		white;
+	fill:			white;
 }
 .search-site svg,
 .user-basket svg {
-	fill:		#fff;
+	fill:			#fff;
 }
 .search-site:hover svg,
 .login:hover svg,
 .user-basket:hover svg {
-	fill: 		#323232;
+	fill: 			#323232;
 }
 .main-item:hover a,
 .user-data .user-basket:hover,
@@ -170,8 +170,8 @@ a.sub-new::after {
 }
 .user-data > form {
 	position:			absolute;
-	top: 				120px;
-	left: 				250px;
+	top: 				59px;
+	left: 				695px;
 	width: 				341px;
 	height:				84px;
 	border-radius:		5px;
@@ -191,8 +191,8 @@ a.sub-new::after {
 	position:			absolute;
 	background-color:	#f8f7f4;
 	box-shadow: 		0 20px 20px rgba(0, 0, 0, 0.4);
-	top: 				120px;
-	right: 				200px;
+	top: 				59px;
+	right: 				210px;
 	width: 				277px;
 	height: 			214px;
 	padding: 			20px 18px;
@@ -205,7 +205,11 @@ a.sub-new::after {
 	padding: 			10px 40px 10px 15px;
 	border: 			1px solid #d3d3d2;
 	background-color: 	#ffffff;
-	border-radius:		5px;	
+	border-radius:		5px;
+}
+.modal-login input[type="email"],
+.modal-login input[type="password"] {
+	margin-bottom:		15px;
 }
 .modal input[type="submit"] {
 	min-width:			100px;
@@ -229,7 +233,7 @@ a.sub-new::after {
 	border-bottom: 			1px solid rgba(50,50,50,.3);
 }
 .modal-autorization {
-	display: flex;
+	display: 			flex;
 }
 .user-data input[type="text"]:hover,
 .modal-login input:hover,
@@ -299,7 +303,7 @@ a.sub-new::after {
 	font-weight: 	700;
 }
 .sliders {
-	margin-top:		300px;
+	margin-top:		400px;
 }
 .breadcrumbs {
 	list-style:		none;
@@ -325,30 +329,47 @@ a.sub-new::after {
 .select {
 	display:			flex;
 	justify-content: 	space-between;
+	margin-bottom:		40px;
 }
 .sel-raspberry,
 .sel-chocolate {
 	width:				560px;
-	min-height:			230px;
-	border-radius:		10px;
+	min-height:			229px;
+	border-radius:		15px;
 }
 .sel-raspberry {
 	background: 		#000 url("../img/raspberries_free.png");
+	position:			relative;
 }
 .sel-chocolate {
 	background: 		#000 url("../img/chocolate_free.png");
+	position:			relative;
 }
 .sel-raspberry p:first-child,
 .sel-chocolate p:first-child {
 	font-size: 			35px;
 	line-height: 		1.171;
-	font-weight: 		700;	
+	font-weight: 		700;
+	margin:				16px 19px;
 }
 .sel-raspberry p:nth-child(2),
 .sel-chocolate p:nth-child(2) {
 	font-size: 			18px;
 	line-height: 		1.222;
 	font-weight: 		700;
+	margin:				17px 20px 57px;
+}
+.sel-raspberry .sel-button,
+.sel-chocolate .sel-button {
+	display:			inline-block;
+	vertical-align:		top;
+	position:			absolute;
+	top:				160px;
+	right:				21px;
+	padding:			12px 23px 13px 22px;
+	border-radius:		23px;
+	box-shadow:			0 2px 2px rgba(172, 16, 0, 0.64);
+	opacity:			0.99;
 }
 .sel-raspberry a,
 .sel-chocolate a {
@@ -362,42 +383,83 @@ a.sub-new::after {
 	display:			flex;
 	flex-wrap:			wrap;
 	justify-content: 	space-between;
-	margin-bottom:		40px;
+	margin-bottom:		10px;
 } 
-.price article {
+.price-item {
 	width:				267px;
 	text-align: 		center;
-								background-color: rgba(173, 200, 81, 0.3);
+	position:			relative;
+}
+.hit-item::before {
+	content: 			"";
+	position:			absolute;
+	top:				0px;
+	left:				0px;
+	width:				61px; 
+	height:				61px;
+	background:			white url("../img/hit.svg");
+	border-radius:		50%;
+}
+.price img {
+	border-radius:		50%;
 }
 .price h2 {
-	color:				white;
+	margin:				6px 0 27px 0;
+	line-height:		0.8;
 }
 .price-goods {
+	position:			absolute;
+	top:				164px;
+	left:				-1px;
 	font-size: 			45px;
 	line-height: 		1;
 	font-weight: 		700;
 	color:				white;
+}
+.price-goods span::before {
+	content: 			"";
+	position:			absolute;
+	top:				5px;
+	left:				82px;
+	width:				31px;
+	height:				36px;
+	background:			url("../img/ruble.svg");
 }
 .price-goods span {
 	font-size: 			30px;
 	line-height: 		1.5;
 	font-weight: 		700;
 	color:				white;
+	padding-left:		25px;
 }
-.price a {
-	background-color:	#e84d37;
+.price-heading a {
+	font-size:			16px;
+	line-height:		1.375;
+	font-weight:		500;
+	color: 				#fff;
+	border-bottom: 		1px solid rgba(255,255,255,.3);
+}
+.price-button {
 	color:				white;
-}
-.price img {
-	border-radius:		50%;
+	font-size:			18px;
+	line-height:		1.222;
+	padding:			11px 19px;
+	border-radius:		23px;
+	box-shadow: 		0 1px 2px #ac1000;
+	background-color: 	#e84d37;
+	background-image: 	linear-gradient(to top, #e74a35 0%, #f26843 100%);
 }
 .features-block	{
-	padding-top:		20px;
+	padding-top:		25px;
+	padding-left:		20px;
 	margin-bottom:		40px;
+	width:				1146px;
+	min-height:			306px;
 	background:			#f1e5cb url("../img/features_bg.jpg");
 	border-radius:		15px;
 }
 .features-block p:first-child {
+	margin:				0;
 	font-size: 			24px;
 	line-height: 		1.25;
 	font-weight: 		500;
@@ -418,16 +480,16 @@ a.sub-new::after {
 .features-list li {
 	position:			relative;
 	width: 				49%;
-	padding-left:		50px;
-	padding-bottom:		15px;
+	padding-left:		55px;
+	padding-top:		20px;
 }
 .features-list li:last-child {
 	padding-bottom:		0;
 }
 
 .features-list li::before {
-	top:			 		0px;
-	left:					0px;  
+	top:			 		9px;
+	left:					1px;
 	width:					49px;
 	height: 				49px;
 }
@@ -451,7 +513,7 @@ a.sub-new::after {
 }
 .blog {
 	width:					560px;
-	padding:				15px 12px;
+	padding:				23px 21px;
 	background:				url("../img/blog_bg.png");
 	background-color:		#ffffff;
 	background-repeat: 		no-repeat;
@@ -460,18 +522,19 @@ a.sub-new::after {
 }
 .blog p {
 	color: 				#323232;
-	font-size: 			11px;
+	font-size: 			16px;
 	font-weight: 		500;
-	line-height: 		1.333;
-	margin-bottom:		9px;
+	line-height: 		1.375;
+	margin:				0;
+	margin-bottom:		5px;
 }
 .blog h3 {
 	margin:				0;
-	width:				186px;
+	width:				285px;
 }
 .blog a {
 	color: 				#323232;
-	font-size: 			16px;
+	font-size: 			24px;
 	font-weight: 		700;
 	line-height: 		1.25;
 	text-decoration: 	underline;
@@ -479,38 +542,54 @@ a.sub-new::after {
 .subscribe {
 	width:				560px;
 	background:			url("../img/subscribe_bg.png") no-repeat;
+	padding-top:		7px;
+	padding-left:		7px;
 }
 .subscribe p {
+	margin:				0;
+	padding:			27px 20px; 
 	font-size: 			16px;
 	line-height: 		1.375;
 	font-weight: 		400;
 	color:				#5a5a5a;
-	padding:			27px 20px; 
 }
+.subscribe form {
+	margin:				8px 0 0 20px;
+	border:				none;
+}
+
 .subscribe input[type="email"] {
-	width: 				245px;
-	height: 			29px;
+	width: 				368px;
+	height: 			44px;
+	border-radius:		5px;
+	padding:			5px 10px;
+	margin-right:		7px;
 }
 .subscribe button {
-	width: 				86px;
-	height: 			29px;
-	box-shadow: 		0 1px 1px rgba(172, 16, 0, 0.64);
-	background-color: 	#e84d37;
+	min-width: 			129px;
+	min-height: 		44px;
+	box-shadow:			0 2px 2px rgba(172, 16, 0, 0.64);
 	background-image: 	linear-gradient(to top, #e74a35 0%, #f26843 100%);
 	color: 				#fefefe;
-	font-size: 			12px;
+	font-size: 			18px;
 	font-weight: 		700;
-	line-height: 		16px;	
+	line-height: 		1.333;
 	border:				0;
-	border-radius:		20px;
+	border-radius:		23px;
 }
 .map {
-	margin-bottom:		20px;
+    width: 				100%;
+    height: 			430px;
+	background-color: 	#ebe5cc;
+    background-image: 	url("../img/map.jpg");
+    background-repeat: 	no-repeat;
+    background-size: 	cover;
+	margin-bottom:		10px;
 }
 .map-modal {
 	position:			fixed;
 	top:				337px;
-	left:				35%;
+	left:				388px;
 	width: 				478px;
 	height: 			443px;
 	padding:			20px 24px;
@@ -592,33 +671,47 @@ a.sub-new::after {
 }	
 footer {
 	display:			flex;
-	margin-top:			10px;
-	justify-content:	space-around;
 } 
 .footer-social ul {
 	display:			flex;
-	width:				265px;
+	width:				186px;
 	margin-right:		130px;
+	padding-top:		25px;
 }
 .footer-social ul,
 .footer-info ul {
 	list-style:			none;
 }
-.footer-social img {
-	border:				2px solid #e6ebe9;
-	border-radius:		50%;
-}
 .footer-social li:not(:last-child) { 
-	margin-right: 		10px; 
+	margin-right: 		11px;
+}
+.social-link {
+	display:			inline-block;
+	vertical-align:		top;
+	width:				38px; 
+    height:				38px;
+    border:				2px solid rgba(255,255,255,.5);
+	border-radius:		50%;
+	opacity:			0.8;
+}
+.social-link:hover,
+.social-link:focus {
+    opacity: 		1;
+    border: 		3px solid rgba(255,255,255,.7);
+}
+.social-link:active {
+    opacity:		0.7;
+    border:			3px solid rgba(255,255,255,.7);
 }
 .footer-info {
 	position:			relative;
+	margin-left:		85px;
+	margin-top:			22px;
 }
 .footer-info ul {
 	display:			flex;
 	flex-wrap: 			wrap;
 	width:				400px;
-	margin-right:		150px;
 	padding-left:		15px;
 }
 .footer-info a {
@@ -632,24 +725,28 @@ footer {
 	font-weight: 			700;
 }
 .info-part li:first-child::before {
-	top:			 		5px;
-	left:					0px;  
+	top:			 		4px;
+	left:					-1px;
 	width:					16px;
 	height: 				13px;
 	background-image: 		url("../img/heart.svg");
 	background-repeat: 		no-repeat;
 	background-position: 	0 0;
 }
+.modal-autorization a:focus,
+.modal-autorization a:hover,
 .footer-info a:focus,
 .footer-info a:hover,
 .copyright a:focus,
 .copyright a:hover {
 	color: 					#ffbc9e;
+	border-bottom: 			1px solid rgba(249,172,159,.3);
 }
 .info-part li:nth-child(1),
 .info-part li:nth-child(3) {
 	padding-left:		6px;
-	width:				50%;
+	padding-bottom:		4px;
+	width:				39%;
 }
 .info-part li:nth-child(2),
 .info-part li:nth-child(4) {
@@ -657,9 +754,18 @@ footer {
 }
 .footer-logo {
 	width:				265px;
+	margin-left:		155px;
+	margin-top:			8px;
+}
+.logotip svg {
+	fill: 			white;
+}
+.logotip:hover svg {
+	fill: 			#ffbc9e;
 }
 .copyright,
 .copyright a {
+	margin:				0;
 	font-size: 			12px;
 	line-height: 		1.5;
 	font-weight: 		400;
