--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,7 @@ a.sub-new::after {
 .breadcrumbs {
 	display:			flex;
 }
-.user-data > form {
+.user-data .popup-search {
 	position:			absolute;
 	top: 				59px;
 	left: 				695px;
@@ -187,7 +187,7 @@ a.sub-new::after {
 	border-radius:		5px;
 	padding-left:		15px;
 }
-.modal {
+.popup {  /* .modal */
 	position:			absolute;
 	background-color:	#f8f7f4;
 	box-shadow: 		0 20px 20px rgba(0, 0, 0, 0.4);
@@ -198,8 +198,8 @@ a.sub-new::after {
 	padding: 			20px 18px;
 	border-radius:		5px;
 }
-.modal-login input[type="email"],
-.modal-login input[type="password"] {
+.popup-login input[type="email"],
+.popup-login input[type="password"] {
 	width: 				241px;
 	height: 			44px;
 	padding: 			10px 40px 10px 15px;
@@ -207,11 +207,11 @@ a.sub-new::after {
 	background-color: 	#ffffff;
 	border-radius:		5px;
 }
-.modal-login input[type="email"],
-.modal-login input[type="password"] {
+.popup-login input[type="email"],
+.popup-login input[type="password"] {
 	margin-bottom:		15px;
 }
-.modal input[type="submit"] {
+.popup input[type="submit"] {
 	min-width:			100px;
 	height:				44px;
 	margin-right:		20px;
@@ -225,29 +225,29 @@ a.sub-new::after {
 	font-weight:		700;
 	line-height:		1.333;
 }
-.modal a {
+.popup a {
 	color: 					#323232;
 	font-size: 				13px;
 	font-weight: 			400;
 	line-height: 			1.846;
 	border-bottom: 			1px solid rgba(50,50,50,.3);
 }
-.modal-autorization {
+.popup-autorization {
 	display: 			flex;
 }
 .user-data input[type="text"]:hover,
-.modal-login input:hover,
-.map-modal input[type="text"]:hover,
-.map-modal input[type="email"]:hover, 
-.map-modal textarea:hover,
+.popup-login input:hover,
+.modal-feedback input[type="text"]:hover,
+.modal-feedback input[type="email"]:hover, 
+.modal-feedback textarea:hover,
 .subscribe input[type="email"]:hover {
 	border: 			2px solid rgba(154, 154, 154, 0.52); 
 }
 .user-data input[type="text"]:focus,
-.modal-login input:focus,
-.map-modal input[type="text"]:focus,
-.map-modal input[type="email"]:focus, 
-.map-modal textarea:focus,
+.popup-login input:focus,
+.modal-feedback input[type="text"]:focus,
+.modal-feedback input[type="email"]:focus, 
+.modal-feedback textarea:focus,
 .subscribe input[type="email"]:focus {
 	border: 			2px solid rgba(46, 136, 228, 0.52);
 }
@@ -586,7 +586,7 @@ a.sub-new::after {
     background-size: 	cover;
 	margin-bottom:		10px;
 }
-.map-modal {
+.modal-feedback {
 	position:			fixed;
 	top:				337px;
 	left:				388px;
@@ -600,11 +600,11 @@ a.sub-new::after {
 	font-weight: 		500;
 	line-height: 		1.166;
 }
-.map-modal input[type="text"] {
+.modal-feedback input[type="text"] {
 	margin-top:			24px;
 }
-.map-modal input[type="text"],
-.map-modal input[type="email"] {
+.modal-feedback input[type="text"],
+.modal-feedback input[type="email"] {
 	margin-bottom:		20px;
 	border-radius:		5px;
 	width: 				267px;
@@ -617,7 +617,7 @@ a.sub-new::after {
 	font-weight: 		400;
 	line-height: 		1.5;
 }
-.map-modal textarea {
+.modal-feedback textarea {
 	margin-bottom:		25px;
 	color: 				#999999;
 	font-size: 			16px;
@@ -626,7 +626,7 @@ a.sub-new::after {
 	padding:			13px 15px;
 	border-radius:		5px;
 }
-.map-modal input[type="submit"] {
+.modal-feedback input[type="submit"] {
 	min-width: 			139px;
 	min-height: 		44px;
 	margin-left:		65%;
@@ -733,8 +733,8 @@ footer {
 	background-repeat: 		no-repeat;
 	background-position: 	0 0;
 }
-.modal-autorization a:focus,
-.modal-autorization a:hover,
+.popup-autorization a:focus,
+.popup-autorization a:hover,
 .footer-info a:focus,
 .footer-info a:hover,
 .copyright a:focus,
@@ -774,3 +774,19 @@ footer {
 .copyright a {
 	border-bottom: 		1px solid rgba(255,255,255,.2);
 }
+
+	/*  вопрос проверяющему наставнику  */
+/* понимаю что ляпов много.. и далеко не perfect pixel, хотя порою непонятно
+почему даже текст, указан верный шрифт/размер/высота строки, а все равно в начале
+предложения идет ровно по  perfect, а в конце уже сильное расхождение..
+то ли это искажение от  .jpg файла что подгружается в perfect pixel, то ли у меня 
+руки кривые..=) 
+
+вопрос по .visually-hidden ,  не понимаю где верно его использовать, если по всему
+потоку он применялся повсеместно. То вопрос как его убирать?
+при навердении в меню?  user-block ? 
+или там все же должно быть  display:none; и  :hover {display:block;} 
+если так, то меню точно переверстывать...  
+
+!спасибо!
+*/
