--- a/css/style.css
+++ b/css/style.css
@@ -17,9 +17,10 @@ a.sub-new::after {
 	padding:		0;
 }
 body {
-	background: 	#849d8f url("../img/ice_raspberries_bar.png") no-repeat top center;
-	font-family: 	Roboto, Arial, sans-serif;
-	color:			white;
+	background-color: 	#849d8f;
+	/* background: 	#849d8f url("../img/ice_raspberries_bar_slide1.png") no-repeat top center; */
+	font-family: 		Roboto, Arial, sans-serif;
+	color:				white;
 }
 .main-header {
 	display: 		flex;
@@ -67,6 +68,23 @@ img {
 	background-color:	white;
 	border-radius:		20px;
 }
+
+
+
+
+.catalog-current {				/* new */
+    /* padding: 8px 14px; */
+    margin: 0;
+    color: #fff;
+    border-bottom: none;
+    border-radius: 16px;
+    background-color: #d07058;
+}
+
+
+
+
+
 .user-data .search-site:hover,
 .user-data .login:hover,
 .user-data .user-basket:hover {
@@ -187,7 +205,7 @@ a.sub-new::after {
 	border-radius:		5px;
 	padding-left:		15px;
 }
-.popup {  /* .modal */
+.popup-login-form {  /* .modal */
 	position:			absolute;
 	background-color:	#f8f7f4;
 	box-shadow: 		0 20px 20px rgba(0, 0, 0, 0.4);
@@ -211,7 +229,7 @@ a.sub-new::after {
 .popup-login input[type="password"] {
 	margin-bottom:		15px;
 }
-.popup input[type="submit"] {
+.popup-login-form input[type="submit"] {
 	min-width:			100px;
 	height:				44px;
 	margin-right:		20px;
@@ -225,7 +243,7 @@ a.sub-new::after {
 	font-weight:		700;
 	line-height:		1.333;
 }
-.popup a {
+.popup-login-form a {
 	color: 					#323232;
 	font-size: 				13px;
 	font-weight: 			400;
@@ -236,7 +254,8 @@ a.sub-new::after {
 	display: 			flex;
 }
 .user-data input[type="text"]:hover,
-.popup-login input:hover,
+.popup-login input[type="email"]:hover,
+.popup-login input[type="password"]:hover,
 .modal-feedback input[type="text"]:hover,
 .modal-feedback input[type="email"]:hover, 
 .modal-feedback textarea:hover,
@@ -244,7 +263,8 @@ a.sub-new::after {
 	border: 			2px solid rgba(154, 154, 154, 0.52); 
 }
 .user-data input[type="text"]:focus,
-.popup-login input:focus,
+.popup-login input[type="email"]:focus,
+.popup-login input[type="password"]:focus,
 .modal-feedback input[type="text"]:focus,
 .modal-feedback input[type="email"]:focus, 
 .modal-feedback textarea:focus,
@@ -283,6 +303,14 @@ a.sub-new::after {
 	top:				5px;
 	left:				16px;
 }
+
+.popup-basket {
+	position:			absolute;
+	top:				56px;
+	left:				50px;
+}
+
+
 .user-block .user-info {
 	margin-top:		26px;
 	text-align:		right;
@@ -302,19 +330,41 @@ a.sub-new::after {
 	line-height: 	1.09; 
 	font-weight: 	700;
 }
-.sliders {
-	margin-top:		400px;
-}
 .breadcrumbs {
+ /* display: -webkit-box; */
+  /* display: -ms-flexbox; */
+  /* display: flex; */
+	margin:			0;
+	margin-top:		-45px;
+	padding:		0;
 	list-style:		none;
+	font-size:		14px;
+	line-height:	1.385em;
+	color:			#ffffff;
+}
+.breadcrumbs li {
+	margin-right:		6px;
+}
+.breadcrumbs a {
+	border-bottom:		1px solid rgba(255, 255, 255, 0.3);
 }
 .breadcrumbs a,
 .breadcrumbs li:last-child {
-	font-size: 		14px;
-	line-height: 	1.142;
-	font-weight: 	400;
-	color:			white;
+	font-size: 			14px;
+	line-height:		1.142;
+	font-weight: 		400;
+	color:				white;
 }
+.breadcrumbs li:last-child {
+	margin-top:		2px;
+}
+
+
+
+
+
+
+
 .login a {
 	background: 	url("../img/entrance.svg") no-repeat;
 }
@@ -440,6 +490,9 @@ a.sub-new::after {
 	border-bottom: 		1px solid rgba(255,255,255,.3);
 }
 .price-button {
+	display:			none;
+	position:			absolute;
+	left:				35px;
 	color:				white;
 	font-size:			18px;
 	line-height:		1.222;
@@ -449,6 +502,23 @@ a.sub-new::after {
 	background-color: 	#e84d37;
 	background-image: 	linear-gradient(to top, #e74a35 0%, #f26843 100%);
 }
+
+.price-item:hover,				/* new */
+.price-item:focus {
+    margin-bottom:		-72px;
+    padding-bottom:		72px;
+    z-index:			20;
+    width:				277px;
+    min-height:			405px;
+    background-color:	rgba(248,247,244,.2);
+    box-shadow:			0 20px 20px 0 rgba(0,0,0,.4);
+    border-radius: 		5px;
+}
+.price-item:hover .price-button,
+.price-item:focus .price-button {
+	display:			block;
+}
+
 .features-block	{
 	padding-top:		25px;
 	padding-left:		20px;
@@ -562,6 +632,8 @@ a.sub-new::after {
 	width: 				368px;
 	height: 			44px;
 	border-radius:		5px;
+    border: 			0;
+	box-shadow:			0 0 0 1px #b3b3b3;
 	padding:			5px 10px;
 	margin-right:		7px;
 }
@@ -671,7 +743,10 @@ a.sub-new::after {
 }	
 footer {
 	display:			flex;
-} 
+}
+.footer-line {
+	border-top:			1px solid rgba(255, 255, 255, 0.3);
+}
 .footer-social ul {
 	display:			flex;
 	width:				186px;
@@ -733,8 +808,15 @@ footer {
 	background-repeat: 		no-repeat;
 	background-position: 	0 0;
 }
+.popup-login-form a:focus,			/*  new */
+.popup-login-form a:hover,			/* new  */
 .popup-autorization a:focus,
 .popup-autorization a:hover,
+.price-item a:first-child:hover,			/* new */
+.price-item a:first-child:focus,			/* new */
+
+.breadcrumbs a:hover,						/* new */
+.breadcrumbs a:focus,						/* new */
 .footer-info a:focus,
 .footer-info a:hover,
 .copyright a:focus,
@@ -784,9 +866,743 @@ footer {
 
 вопрос по .visually-hidden ,  не понимаю где верно его использовать, если по всему
 потоку он применялся повсеместно. То вопрос как его убирать?
-при навердении в меню?  user-block ? 
-или там все же должно быть  display:none; и  :hover {display:block;} 
+при наведении в меню?  user-block ?  может есть какой-то  css-селектор который умеет удалять класс у выбранного объекта?!
+или там все же должно быть  display:none;  и  :hover {display:block;} 
 если так, то меню точно переверстывать...  
+
+а ещё момент, файлы .jpg, .png и .svg есть смысл разносить в разные папки, чтобы было понятно где растр, где вектор?
+или как у меня всё в одной папке, тож норм!?
+
+вопрос по слайдеру,  понимаю что copy paste, но как оптимизировать под мой проект?
+z-index  не работает 
+позиционированием перекрывает  header 
+
+вот ключевая строка, не понимаю как сделать переключение цвета на body 
+	#product-2:checked ~ .site-wrapper {
+		background-color: #8996a6;
+		background-image: url("../img/ice_chocolate_bar_slide2.png");
+	}
 
 !спасибо!
 */
+
+
+	/* test  SLIDER  */
+
+
+.site-wrapper {
+  min-width: 940px;
+  background-color: #849d8f;
+  background-image: url("../img/ice_raspberries_bar_slide1.png");
+  background-repeat: no-repeat;
+  background-position: top center;
+  
+  transition: background-image 0.5s ease, background-color 0.5s ease;   
+}
+
+.site-wrapper::before,
+.site-wrapper::after {
+  content: "";
+  visibility: hidden;
+}
+
+.site-wrapper::before {
+  background-image: url("../img/ice_chocolate_bar_slide2.png");
+}
+
+.site-wrapper::after {
+  background-image: url("../img/ice_strawberry_bar_slide3.png");
+}
+
+
+.slider {
+  position: relative;
+  
+  padding-top: 321px;
+  
+  text-align: center;
+  color: #ffffff;
+}
+
+.slider-list {
+  margin: 0;
+  padding: 0;
+  
+  list-style: none;
+}
+
+.slide {
+  display: none;
+}
+
+.slide-title {
+  width: 700px;
+  margin: 0 auto;
+  margin-bottom: 27px;
+  
+  font-size: 60px;
+  line-height: 60px;
+  font-weight: 800;
+}
+
+.button-slider {
+  display: inline-block;
+  padding: 12px 44px;
+
+  font-weight: 600;
+  font-size: 31px;
+  line-height: 41px;
+  text-align: center;
+  color: #ffffff;
+  vertical-align: top;
+  text-decoration: none;
+  text-shadow: 0 2px 5px rgba(160, 32, 11, 0.76);
+
+  background: #f26843;
+  background: linear-gradient(to bottom, #f26843 0%, #e74a35 100%);
+  border-radius: 50px;
+  box-shadow: 0 2px 2px rgba(172, 16, 0, 0.64);
+  border: none;
+
+  cursor: pointer;
+}
+
+.button-slider:hover {
+  background: linear-gradient(to bottom, #f58669 0%, #ec6f5e 100%);
+  box-shadow: 0 2px 2px rgba(172, 16, 0, 1);
+}
+
+.button-slider:active {
+  background: linear-gradient(to bottom, #d84732 0%, #e1613e 100%);
+  box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
+}
+
+.slider-controls {
+  position: absolute;
+  bottom: 63px;
+  left: 0;
+  z-index: 20;
+  
+  font-size: 0;
+}
+
+.slider-controls label {
+  display: inline-block;
+  width: 17px;
+  height: 17px;
+  margin-right: 8px;
+
+  vertical-align: top;
+
+  background-color: transparent;
+  border: 2px solid #ffffff;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+#product-1:checked ~ .site-wrapper {
+  background-color: #849d8f;
+  background-image: url("../img/ice_raspberries_bar_slide1.png");
+}
+
+#product-2:checked ~ .site-wrapper {
+  background-color: #8996a6;
+  background-image: url("../img/ice_chocolate_bar_slide2.png");
+}
+
+#product-3:checked ~ .site-wrapper {
+  background-color: #9d8b84;
+  background-image: url("../img/ice_strawberry_bar_slide3.png");
+}
+
+#product-1:checked ~ .site-wrapper #slide1,
+#product-2:checked ~ .site-wrapper #slide2,
+#product-3:checked ~ .site-wrapper #slide3 {
+  display: block;
+}
+
+#product-1:checked ~ .site-wrapper label[for="product-1"],
+#product-2:checked ~ .site-wrapper label[for="product-2"],
+#product-3:checked ~ .site-wrapper label[for="product-3"] {
+  background-color: #ffffff;
+}
+
+
+
+
+	/* filter  !!! */
+	
+.filters {
+	font-size:			16px;
+	font-weight:		500;
+	line-height:		1.13em;
+	margin-bottom:		4px;
+}
+.filter {
+	display: 			-webkit-box;
+	display:			-ms-flexbox;
+	display:			flex;
+	-webkit-box-pack: 	justify;
+	-ms-flex-pack: 		justify;
+	justify-content:	space-between;
+	-ms-flex-wrap:		wrap;
+	flex-wrap: 			wrap;
+	-ms-flex-line-pack: justify;
+	align-content:		space-between;
+	min-height:			131px;
+	width:				860px;
+}
+.filter fieldset {
+	padding:		0;
+	border:			none;
+}
+
+.filter legend {
+  padding-left: 15px;
+  padding-bottom: 5px;
+
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.14em;
+}
+
+.filter-fat-wrapper,
+.filter-filler-wrapper {
+  padding: 9px 14px;
+
+  background-image: none;
+  border-radius: 20px;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+/*Сортировка*/
+.filter-select-wrapper {
+  position: relative;
+  background-color: rgba(255, 255, 255, 0.2);
+
+  cursor: pointer;
+
+  background-image: url("../img/select_arrow.svg");
+  background-repeat: no-repeat;
+  background-position: 168px 16px;
+  border-radius: 20px;
+}
+
+.filter-select {
+  width: 193px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 9px 34px 9px 14px;
+
+  cursor: pointer;
+
+  font: inherit;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.13em;
+  color: #ffffff;
+
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  background: transparent;
+  border: none;
+  border-radius: 20px;
+}
+
+.filter-select::-ms-expand { /*убираем стрелку с селекта в IE11 Источник: https://toster.ru/q/380623*/
+  display: none;
+}
+
+.filter-select-wrapper:hover,
+.filter-select-wrapper:focus {
+  cursor: pointer;
+
+  color: #323232;
+
+  background-color: #ffffff;
+}
+
+.filter-select:hover,
+.filter-select:focus {
+  color: #323232;
+
+  background-image: url("../img/select_arrow_black.svg");
+  background-repeat: no-repeat;
+  background-position: 168px 16px;
+  background-color: #ffffff;
+  outline: none;
+}
+
+.filter-select option {
+  font-weight: 500;
+}
+
+/*Фильтр по цене*/
+.filter-range {
+  width: 220px;
+  height: 36px;
+
+  background-image: none;
+  border-radius: 20px;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.range-controls {
+  position: relative;
+  padding-top: 16px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.range-controls .scale {
+  height: 4px;
+
+  background: rgba(255, 255, 255, 0.5);
+}
+
+.range-controls .bar {
+  width: 118px;
+  height: 4px;
+  margin-left: 13px;
+
+  background: #ffffff;
+}
+
+.range-toggle {
+  position: absolute;
+	width: 20px;
+	height: 23px;
+	top: 8px;
+
+	background-image: url('../img/filter_button.svg');
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.range-toggle-min {
+  left: 33px;
+}
+
+.range-toggle-max {
+  left: 131px;
+}
+
+.range-toggle:hover,
+.range-toggle:focus {
+    transform: scale(1.1);
+	cursor: pointer;
+}
+
+/*Фильтр по жирности*/
+.filter-fat {
+  width: 415px;
+}
+
+.filter-fat-wrapper {
+  display: flex;
+   justify-content: space-between;
+}
+
+.filter-radio {
+  position: relative;
+  padding-left: 31px;
+
+  cursor: pointer;
+}
+
+.filter-input-radio + .radio-indicator {
+  position: absolute;
+  top: -2px;
+  left: 0;
+  z-index: 5;
+  width: 22px;
+  height: 22px;
+
+  opacity: 0.8;
+  background-image: url("../img/radio_off.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: cover;
+}
+
+.filter-input-radio:checked + .radio-indicator {
+  position: absolute;
+  top: -2px;
+  left: 0;
+  z-index: 5;
+  width: 22px;
+  height: 22px;
+
+  opacity: 0.8;
+  background-image: url("../img/radio_on.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: cover;
+}
+
+.filter-input-radio:hover + .radio-indicator,
+.filter-input-radio:checked:hover + .radio-indicator {
+  opacity: 1;
+}
+
+.filter-input-radio:focus + .radio-indicator,
+.filter-input-radio:checked:focus + .radio-indicator {
+  opacity: 1;
+  border-color: #663d15;
+  outline: thin dotted;
+  outline: 5px auto -webkit-focus-ring-color;
+}
+
+.filter-input-radio:disabled + .radio-indicator,
+.filter-radio-disabled {
+  cursor: default;
+  opacity: 0.4;
+}
+
+/*Фильтр по наполнителям*/
+.filter-filler {
+  width: 703px;
+}
+
+.filter-filler-wrapper {
+  display: flex;
+   justify-content: space-between;
+  padding: 9px 20px 9px 16px;
+}
+
+.filter-checkbox {
+  position: relative;
+  padding-left: 33px;
+
+  cursor: pointer;
+}
+
+.filter-input-checkbox + .checkbox-indicator {
+  position: absolute;
+  top: -1px;
+  left: 0;
+  z-index: 5;
+  width: 20px;
+  height: 20px;
+
+  opacity: 0.8;
+  background-image: url("../img/checkbox_off.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: cover;
+}
+
+.filter-input-checkbox:checked + .checkbox-indicator {
+  position: absolute;
+  top: -1px;
+  left: 0;
+  z-index: 5;
+  width: 23px;
+  height: 20px;
+
+  opacity: 0.8;
+  background-image: url("../img/checkbox_on.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: cover;
+}
+
+.filter-input-checkbox:hover + .checkbox-indicator,
+.filter-input-checkbox:checked:hover + .checkbox-indicator {
+  opacity: 1;
+}
+
+.filter-input-checkbox:focus + .checkbox-indicator,
+.filter-input-checkbox:checked:focus + .checkbox-indicator {
+  opacity: 1;
+  border-color: #663d15;
+  outline: thin dotted;
+  outline: 5px auto -webkit-focus-ring-color;
+}
+
+.filter-input-checkbox:disabled + .checkbox-indicator,
+.filter-checkbox-disabled {
+  cursor: default;
+  opacity: 0.4;
+}
+
+.filter-button {
+  -ms-flex-item-align: end;
+           align-self: flex-end; /*иначе кнопкак вертикально тянется*/
+  padding: 7px 27px;
+
+  color: #ffffff;
+  font-size: 16px;
+  line-height: 1.13em;
+  font-weight: 500;
+  text-align: center;
+  vertical-align: middle;
+
+  background-color: rgba(255, 255, 255, 0.2);
+  background-image: none;
+  border-radius: 20px;
+  border: solid 2px #ffffff;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+.filter-button:hover,
+.filter-button:focus {
+  color: #323232;
+
+  background-image: none;
+  background-color: #ffffff;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+.filter-button:active {
+  color: #323232;
+
+  background-image: none;
+  background-color: #ededed;
+  -webkit-box-shadow: inset 0px 2px 1px 0 #696969;
+          box-shadow: inset 0px 2px 1px 0 #696969;
+}
+	
+	
+	
+	
+	
+
+/*  -------Пагинация-------  */
+.pagination-list {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+     -ms-flex-pack: start;
+   justify-content: flex-start;
+  width: 167px;
+  padding: 0;
+  margin: 0;
+  margin-left: auto;
+  margin-bottom: 28px;
+
+  list-style: none;
+
+  /* Временно для сетки */
+  /*outline: 2px solid #db215e;*/
+}
+
+.pagination-item a {
+  display: inline-block;
+  width: 27px;
+  height: 27px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding-top: 4px;
+  margin-right: 2px;
+  vertical-align: bottom;
+
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.13em;
+  color: #ffffff;
+  text-align: center;
+
+  border-radius: 50%;
+}
+
+.pagination-item a:hover,
+.pagination-item a:focus {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.pagination-item a:active {
+  color: #323232;
+
+  background-color: #ffffff;
+}
+
+.pagination-item-current a {
+  color: #323232;
+
+  background-color: #ffffff;
+}
+
+.pagination-item-current a:hover,
+.pagination-item-current a:focus,
+.pagination-item-current a:active {
+  color: #323232;
+
+  background-color: #ffffff;
+}
+
+.pagination-item-prev::before {
+  content: "";
+  pointer-events: none;
+  cursor: default;
+
+  position: absolute;
+  top: 10px;
+  left: -21px;
+  width: 7px;
+  height: 7px;
+
+  background-color: transparent;
+  -webkit-transform: rotate(225deg);
+      -ms-transform: rotate(225deg);
+          transform: rotate(225deg);
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+  border-right: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.pagination-item-next::before {
+  content: "";
+
+  position: absolute;
+  top: 10px;
+  right: 0;
+  width: 7px;
+  height: 7px;
+
+  background-color: transparent;
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
+  border-top: 1px solid #ffffff;
+  border-right: 1px solid #ffffff;
+}
+
+
+
+
+ /*  -------------------------- */
+ 
+
+/*  Попапы -- корзина  */
+.popup-basket {
+  display: none;
+  position: absolute;
+  padding-top: 4px;
+}
+
+
+.basket-container {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding-top: 21px;
+  padding-left: 16px;
+  padding-right: 16px;
+
+  font-size: 13px;
+  color: #323232;
+
+  background-color: #f8f7f4;
+  -webkit-box-shadow: 0px 20px 20px 0 rgba(0, 0, 0, 0.4);
+          box-shadow: 0px 20px 20px 0 rgba(0, 0, 0, 0.4);
+  border-radius: 5px;
+}
+							/*  надо смотреть повторы  */
+.basket-container {
+  position: relative;
+  padding-top: 19px;
+  width: 539px;
+  min-height: 242px;
+
+  text-align: right;
+
+  line-height: 1.23em;
+}
+
+.popup-basket span {
+  color: #999999;
+}
+
+.popup-basket b {
+  display: block;
+  margin-bottom: 15px;
+  margin-right: -3px;
+
+  text-align: right;
+  font-size: 15px;
+  font-weight: 700;
+  line-height: 1.2em;
+}
+
+.popup-basket img {
+  border-radius: 50%;
+}
+
+.basket-button {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+/*Таблица корзины*/
+.basket-table {
+  width: 100%;
+  border-collapse: collapse;
+  border-bottom: 1px solid #cacac7;
+  margin-bottom: 14px;
+}
+
+.basket-table-item {
+  min-height: 53px;
+}
+
+.cell {
+  vertical-align: top;
+  padding-top: 10px;
+  text-align: center;
+}
+
+.column-1 {
+  position: relative;
+  width: 22px;
+}
+
+.column-2 {
+  padding-top: 0;
+  padding-bottom: 17px;
+  width: 33px;
+}
+
+.basket-table-item:last-child .column-2 {
+  padding-bottom: 21px;
+}
+
+.column-3 {
+  text-align: left;
+  padding-left: 11px;
+}
+
+.column-4 {
+  width: 112px;
+}
+
+.column-5 {
+  width: 82px;
+}
+
+.basket-table .popup-close::before {
+  content: "";
+
+  position: absolute;
+  top: 11px;
+  left: 5px;
+  width: 11px;
+  height: 11px;
+
+  background-image: url("../img/cross_small.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.basket-table .popup-close:focus::before {
+  border-color: #663d15;
+  outline: thin dotted;
+  outline: 2px auto -webkit-focus-ring-color;
+}
+
+ 
+ 
+ 
